--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="login">Login</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="facebook">facebook</string>
 </resources>
