--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="dummy_value">Wira Sukma Saputra</string>
     <string name="barMenu2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatu</string>
     <string name="login">Login</string>
+    <string name="Signup">Signup</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
