update file baru

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
     <string name="CampingCuy">Camping
         Cuy</string>
     <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, to</string>
-
+    <string name="asset">Welcome Universitas Kuningan Jawa Barat</string>
 </resources>
